--- a/contacts.html
+++ b/contacts.html
@@ -51,10 +51,10 @@
     <div class="row">
         <article class="col-sm-5 ">
           <div class="row">
-              <section class="col-md-12">
+              <section class="col-md-10">
                 <h3>Contact Through Mail</h3>
                   
-                      <form action="mailto:ychidra@gmail.com" method="post" enctype="text/plain">
+                      <form action="mailto:akhilkumarbusireddy@gmail.com" method="post" enctype="text/plain">
                         First Name<br>
                         <label><input type="text" id="fname" name="firstname" placeholder="Your first name.."></label><br>
                     
