--- a/st.html
+++ b/st.html
@@ -39,6 +39,9 @@
                     <li class="nav-item">
                       <a class="nav-link" href="st.html">Apagehasnoname</a>
                     </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="qunit.html">qunitTesting</a>
+                    </li>
                   </ul>
                   <form class="form-inline mt-2 mt-md-0">
                     <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
